<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/client_id_edit_view"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/client_id_edit_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/client_name_edit_view"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/client_name_edit_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/client_id_edit_view"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="@+id/client_id_edit_view"
        app:layout_constraintTop_toBottomOf="@+id/client_id_edit_view"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/product_name_edit_view"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/product_name_edit_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/client_name_edit_view"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="@+id/client_name_edit_view"
        app:layout_constraintTop_toBottomOf="@+id/client_name_edit_view"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/product_price_edit_view"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/product_price_edit_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/product_name_edit_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_name_edit_view"
        app:layout_constraintTop_toBottomOf="@+id/product_name_edit_view"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/product_quantity_edit_view"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/product_quantity_edit_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/product_price_edit_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_price_edit_view"
        app:layout_constraintTop_toBottomOf="@+id/product_price_edit_view"
        app:layout_constraintVertical_bias="0.04" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="264dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/product_quantity_edit_view"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="@+id/product_quantity_edit_view"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity_edit_view"
        app:layout_constraintVertical_bias="0.102">

        <TextView
            android:id="@+id/total_billing_text_view"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:text="@string/total_billing_text_view" />

        <TextView
            android:id="@+id/record_billing_text_view"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:text="@string/record_billing_text_view" />

        <Button
            android:id="@+id/total_input_billing_button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/total_input_billing_button" />

        <Button
            android:id="@+id/total_record_billing_button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/total_record_billing_button" />

        <Button
            android:id="@+id/billing_details_button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/billing_details_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="53dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/prev_billing_button"
            android:layout_width="160dp"
            android:layout_height="58dp"
            android:layout_marginLeft="20dp"
            android:text="@string/prev_billing_button" />

        <Button
            android:id="@+id/next_billing_button"
            android:layout_width="160dp"
            android:layout_height="58dp"
            android:layout_marginLeft="20dp"
            android:text="@string/next_billing_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>